# Comlook

./: .gitignore  kanika.py  main.py  pyproject.toml  things_needed.txt
translation/: LatestWithTranslator.py  actualShit.py  fullPipeLine.py  optimizedFullPipeLine.py
translation/supports/: Ml.py  ReWriter.py  TextWork.py  Translators.py
